--- a/mvcagain/Web.config
+++ b/mvcagain/Web.config
@@ -70,7 +70,7 @@
   <applicationSettings>
     <mvcagain.Properties.Settings>
       <setting name="connectionString" serializeAs="String">
-        <value>Server=DESKTOP-A9G0RJD\SQLEXPRESS;Database=bookstore;Trusted_Connection=True;</value>
+        <value>Server=.\SQLEXPRESS;Database=bookstore;Trusted_Connection=True;</value>
       </setting>
     </mvcagain.Properties.Settings>
   </applicationSettings>
